--- a/src/components/pages/Accueil.css
+++ b/src/components/pages/Accueil.css
@@ -1,18 +1,39 @@
 .buttonValid {
     background-color: green;
-    color: white;
+    color: #f5f5f5;
     width: 180px;
     height: 120px;
     display: flex;
-    position: relative;
+    position: absolute;
     align-items: center;
     border-radius: 60%;
+    margin-left: 90px;
 }
 
 .livre {
     width: 300px;
 }
 
-.carrousel {
+/* .carrousel {
     width: 100px;
+} */
+
+.entree{
+    text-align: center;
+    color: #f5f5f5;
+    background-color: #C54839;
+}
+
+.text-rajout {
+    width: 35%;
+    color: #f5f5f5;
+}
+
+.text{
+    padding-top: 50px;
+    padding-left: 10px;
+}
+
+.accueil{
+    background-color: #C54839;
 }
