--- a/src/components/pages/Accueil.css
+++ b/src/components/pages/Accueil.css
@@ -37,3 +37,13 @@
 .accueil{
     background-color: #C54839;
 }
+
+.carton{
+    background-color: #f5f5f5;
+    padding-right: 8px;
+    padding-left: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin-right: 8px;
+    margin-bottom: 12px;
+}
