--- a/src/components/pages/DecouvGite.css
+++ b/src/components/pages/DecouvGite.css
@@ -15,6 +15,7 @@
     background-color: #C54839;
     color: azure;
     text-align: center;
+    padding-top: 10px;
 }
 
 .list {
@@ -22,9 +23,13 @@
 }
 
 .button {
-    width: 400px;
-    margin-left: 5px;
-    margin-right: 5px;
+    width: 380px;
+    height: 70px;
+    /* margin-left: 10px;
+    margin-right: 10px; */
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 90%;
 }
 /* .essai {
     background-color: aqua;
