--- a/src/components/pages/Slider2.css
+++ b/src/components/pages/Slider2.css
@@ -23,6 +23,7 @@
 
 .defil{
     width: 70%;
+    border-radius: 30%;
     /* padding-top: 10px;
     padding-left: 10px; */
     /* padding-right: 10px; */
