--- a/src/components/pages/DecouvGite.css
+++ b/src/components/pages/DecouvGite.css
@@ -30,7 +30,14 @@
     margin-top: 10px;
     margin-bottom: 10px;
     border-radius: 90%;
+    color: brown;
 }
 /* .essai {
     background-color: aqua;
 } */
+
+.carton{
+    background-color: #f5f5f5;
+    color: black;
+    margin-left: 15px;
+}
