--- a/src/components/pages/Slider2.css
+++ b/src/components/pages/Slider2.css
@@ -4,10 +4,14 @@
     margin: 0;
 }
 
-/* .frame {
-    width: 400px;
-    height: 200px;
-} */
+.frame {
+    border-radius: 50%;
+    /* margin-left: 20px;
+    margin-right: 20px; */
+
+    /* width: 400px;
+    height: 200px; */
+}
 
 .overlay {
     width: 100%;
@@ -22,9 +26,13 @@
 }
 
 .defil{
-    width: 70%;
+    width: 800px;
     border-radius: 30%;
     /* padding-top: 10px;
     padding-left: 10px; */
     /* padding-right: 10px; */
+}
+
+.reduit{
+    width: 100%;
 }
