--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,7 @@
 .HeaderContain {
     background-color: #5e0011;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
     color: #f5f5f5;
     padding: 10px 0;
     z-index: 100;
