--- a/src/components/pages/Contact.css
+++ b/src/components/pages/Contact.css
@@ -1,8 +1,10 @@
 .title {
     background-color: #C54839;
     color: #f5f5f5;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 
 }
 
@@ -22,7 +24,7 @@
 .inter {
     border-radius: 10px;
     background-color: #f5f5f5;
-    color: #C54839;
+    color: #5536B5;
     /* width: 80%; */
     /* align-items: center ; */
     margin-left: 40px;
@@ -39,4 +41,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.place{
+    height: 80px;
+}
+
+.middleonpos{
+    height: 50%;
+}
+
+.h4{
+    margin: 0px;
+    padding: 0px;
 }
