--- a/src/components/pages/DecouvGite.css
+++ b/src/components/pages/DecouvGite.css
@@ -40,4 +40,15 @@
     background-color: #f5f5f5;
     color: black;
     margin-left: 15px;
+    /* text-align: center; */
+}
+
+.presentation{
+    border-radius: 30%;
+    stroke: #f5f5f5;
+    background-color: #f5f5f5;
+    color: black;
+    margin: 15px;
+    padding: 20px;
+    font-size: small;
 }
