--- a/src/components/pages/Slider2.css
+++ b/src/components/pages/Slider2.css
@@ -6,11 +6,11 @@
 
 .frame {
     border-radius: 50%;
-    /* margin-left: 20px;
-    margin-right: 20px; */
+    padding-left: 25px;
+    padding-top: 25px;
 
     /* width: 400px;
-    height: 200px; */
+    height: 400px; */
 }
 
 .overlay {
